# djangoweb

./: .env.example  .gitignore  README.md  pyproject.toml
app/: urls.py  views.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: home.html
djangoweb/: asgi.py  settings.py  urls.py  wsgi.py
